# Q4-hackathon2-todo

./: .gitignore  CLAUDE.md  DEBUGGING_VERCEL_ERRORS.md  FIX_API_ROUTES_404.md  FIX_HTML_NOT_JSON_ERROR.md  FIX_VERCEL_AUTH_ERROR.md  FQ4-hakathonsQ4-hackathon2-todobackend.env  FQ4-hakathonsQ4-hackathon2-todophase3-chatbotbackend.env  FQ4-hakathonsQ4-hackathon2-todophase3-chatbotfrontend.env.local  PR_DESCRIPTION.md  PUSH_TO_GITHUB.md  RAILWAY_BACKEND_FOUND.md  README.md  SYSTEM_STATUS.md  TEST_EXECUTION_REPORT.md  VALIDATION_CHECKLIST.md  auth_test.py  check_backend_db.py  check_users.py  comprehensive_test.py  comprehensive_test_ascii.py  cookies.txt  create_phase3_user.py  create_test_user.py  database_migrator.py  integration_test.py  integration_test_simple.py  migrate_database.py  migration_plan.md  post_migration_test.py  post_migration_test_ascii.py  pyproject.toml  reset_db.py  start-servers.js  test_all_features.sh  test_auth.py  test_chat_auth.py  test_chat_auth_ascii.py  vercel.json
backend/: README.md  alembic.ini  requirements.txt
frontend/: .eslintrc  .gitignore  .prettierrc  README.md  package.json  tsconfig.json
phase2-fullstack/: README.md
phase3-chatbot/: .env.example  AUTH_SETUP_INSTRUCTIONS.md  IMPLEMENTATION_SUMMARY.md  LOCAL_AUTH_SETUP.md  LOCAL_DEVELOPMENT.md  README-phase3.md  README.md  SOLUTION_COMPLETE.md  chat_test.py  comprehensive-verification.js  comprehensive_test.py  create_tables.py  create_test_user.py  docker-compose.yml  e2e_chat_test.py  final-validation.js  final-verification.js  final_verification.py  health_check.bat  (+20 more)
(+706 files in other folders)
